// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser basic 1`] = `
Object {
  "composesCount": 0,
  "staticCSSRules": Array [],
  "styles": Object {
    ".thing": Object {
      "WebkitBoxPack": "center",
      "display": "-webkit-box; display: -ms-flexbox; display: flex",
      "justifyContent": "center",
      "msFlexPack": "center",
      "width": "var(--css-hash-0)",
    },
  },
  "varCount": 0,
}
`;

exports[`parser fancy 1`] = `
Object {
  "composesCount": 0,
  "staticCSSRules": Array [],
  "styles": Object {
    ".some-selector": Object {
      "&::before": Object {
        "color": "blue",
        "content": "'pseudo'",
        "height": "20px",
        "width": "20px",
      },
      "&:hover": Object {
        "backgroundColor": "green",
      },
      "@media (max-width: 500px)": Object {
        "height": "var(--css-hash-1)",
        "position": "fixed",
      },
      "@media print": Object {
        "display": "none",
      },
      "WebkitBoxPack": "center",
      "display": "-webkit-box; display: -ms-flexbox; display: flex",
      "justifyContent": "center",
      "msFlexPack": "center",
      "width": "var(--css-hash-0)",
    },
  },
  "varCount": 0,
}
`;

exports[`parser static 1`] = `
Object {
  "composesCount": 0,
  "staticCSSRules": Array [
    ".thing {
    display: block;
    height: 50px;
    width: 30px
}",
  ],
  "styles": Object {
    ".thing": Object {
      "display": "block",
      "height": "50px",
      "width": "30px",
    },
  },
  "varCount": 0,
}
`;
